# gridflex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ingest.yml  pages.yml  test.yml
data/raw/fuel_mix/: 2019.parquet  2020.parquet  2021.parquet  2022.parquet  2023.parquet  2024.parquet  2025.parquet  2026.parquet
data/raw/pjm_demand/: 2019.parquet  2020.parquet  2021.parquet  2022.parquet  2023.parquet  2024.parquet  2025.parquet  2026.parquet
data/raw/pjm_forecast/: 2019.parquet  2020.parquet  2021.parquet  2022.parquet  2023.parquet  2024.parquet  2025.parquet  2026.parquet
data/raw/subba_demand/: 2019.parquet  2020.parquet  2021.parquet  2022.parquet  2023.parquet  2024.parquet  2025.parquet  (+1 more)
gridflex/: cli.py  config.py
gridflex/carbon/: average.py
gridflex/features/: build.py  export.py
gridflex/ingest/: eia.py  land.py  validate.py  weather.py
gridflex/models/: backtest.py  baselines.py  benchmark.py  flexibility.py  live.py  marginal_emissions.py  zone_aggregate.py
gridflex/store/: db.py
scripts/: backfill.py  backfill_weather.py  check_weather_join.py  clean_outliers.py  explore_metadata.py  find_pjm_subba.py  smoke_test.py
site/: flexibility_engine.js  index.html
site/data/: latest.json
tests/: conftest.py  test_backtest.py  test_baselines.py  test_benchmark.py  test_clean_outliers.py  test_eia_client.py  test_export.py  test_export_scoreboard.py  test_features_build.py  test_flexibility.py  test_live.py  test_marginal_emissions.py  test_spike_detection.py  test_store.py  test_validate.py  test_zone_aggregate.py
(+8 files in other folders)
